<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_welcome_view"
    android:gravity="bottom"
    android:orientation="vertical"
    android:padding="5dp"
    tools:context=".WelcomeActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingTop="10dp">

        <TextView
            style="@style/main_text_welcome_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/main_text_welcome_activity"
            android:textSize="26sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.4"
            android:gravity="bottom"
            android:orientation="vertical"
            android:paddingBottom="50sp">

            <androidx.cardview.widget.CardView
                android:id="@+id/card_view_welcome_activity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                app:cardBackgroundColor="@android:color/transparent"
                app:cardCornerRadius="25dp">

                <eightbitlab.com.blurview.BlurView
                    android:id="@+id/blurView_welcome_fragment"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:padding="15dp">

                        <TextView
                            android:id="@+id/textView"
                            style="@style/second_text_welcome_view"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:textSize="14sp"
                            android:fontFamily="@font/cousine"
                            android:text="@string/main_text_card_welcome_activity" />

                        <TextView
                            android:id="@+id/textView2"
                            style="@style/third_text_welcome_view"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="12sp"
                            android:layout_gravity="center"
                            android:gravity="center"
                            android:text="@string/second_text_card_welcome_activity" />

                        <Button
                            android:id="@+id/button_welcome_view"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@drawable/drawable_background_button_welcome_view"
                            android:minHeight="28dp"
                            android:layout_marginTop="20dp"
                            android:textSize="13sp"
                            android:text="@string/button_welcome_activity"
                            android:textColor="@color/white"
                            tools:ignore="TouchTargetSizeCheck" />

                    </LinearLayout>
                </eightbitlab.com.blurview.BlurView>

            </androidx.cardview.widget.CardView>
        </LinearLayout>


    </LinearLayout>
</LinearLayout>